--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.1.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
+    "react-scripts": "^3.3.1",
     "redux": "^4.0.5",
     "redux-firestore": "^0.11.0",
     "redux-thunk": "^2.3.0"
