--- a/package.json
+++ b/package.json
@@ -6,17 +6,29 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@trendmicro/react-sidenav": "^0.5.0",
+    "date-fns": "^2.9.0",
+    "faker": "^4.1.0",
     "firebase": "^7.8.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-data-sort": "^1.2.1",
     "react-dom": "^16.12.0",
+    "react-grid-gallery": "^0.5.5",
+    "react-helmet": "^5.2.1",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-search-box": "^2.0.2",
+    "react-table": "^7.0.0-rc.15",
+    "react-table-v6": "^6.8.6",
     "redux": "^4.0.5",
     "redux-firestore": "^0.11.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +50,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^5.6.3",
+    "@semantic-ui-react/craco-less": "^1.2.1",
+    "Faker": "^0.7.2",
+    "semantic-ui-less": "^2.4.1"
   }
 }
